--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-// package.json (Express 4.0)
 {
   "name": "rogers-api",
   "main": "app.js",
@@ -6,6 +5,7 @@
     "express": "~4.0.0",
     "morgan": "~1.0.0",
     "body-parser": "~1.0.0",
-    "method-override": "~1.0.0"
+    "method-override": "~1.0.0",
+    "rogers":"~0.0.2"
   }
 }
